posiGen_FullsendBox/src/objects/EE_Analytic_Snapshot__c.object
<CustomObject>
    <description>This is an analytic snapshot for EE</description>
    <fields>
        <fullName>Age_of_Case__c</fullName>
        <description>Age of the case</description>
        <label>Age of Case</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>All_Open_Projects__c</fullName>
        <description>Should display all the available open projects</description>
        <label>All Open Projects</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Assessors__c</fullName>
        <description>Assessments by assessors</description>
        <label>Assessors</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EEAssessments1__c</fullName>
        <description>Displays the current data for all EE assessments</description>
        <label>EE Assessments</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EE_Upgrade_Projects__c</fullName>
        <description>Amount of EU projects should be displayed</description>
        <label>EE Upgrade Projects</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EE_users__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EE Users</label>
        <referenceTo>EE_Users__c</referenceTo>
        <relationshipLabel>EE Analytic Snapshots</relationshipLabel>
        <relationshipName>EE_Analytic_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EU_Projects_Progress__c</fullName>
        <description>Should display the EU projects dates</description>
        <label>EU Projects Progress</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Kwh_saved__c</fullName>
        <description>% savings</description>
        <label>%Kwh saved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Open_Cases__c</fullName>
        <description>Will display ALL open cases</description>
        <label>Open Cases</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PV_Installer__c</fullName>
        <description>Installer names</description>
        <label>PV Installer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Surveys__c</fullName>
        <description>Survey Picklist for EE</description>
        <label>Surveys</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>EE Analytic Snapshot</label>
    <nameField>
        <label>EE Analytic Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EE Analytic Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>